2008-06-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/36362
	* gcc.c-torture/execute/20080529-1.c: New test.

2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-05-29  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/nested-func-6.c: New test.

2008-05-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36300
	* gcc.dg/pr36300-1.c: New testcase.
	* gcc.dg/pr36300-2.c: Likewise.

2008-05-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36339
	* gcc.c-torture/execute/pr36339.c: New testcase.
	* gcc.dg/tree-ssa/loadpre8.c: XFAIL.

2008-05-27  Alexandre Oliva  <aoliva@redhat.com>

	PR c++/35909
	* g++.dg/conversion/bitfield9.C: New.

2008-05-26  Kai Tietz  <kai.tietz@onevision.com>

	PR target/36321
	* gcc-c.torture/execute/pr36321.c: New.

2008-05-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36237
	* g++.dg/gomp/pr36237.C: New test.

2008-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36023
	* g++.dg/ext/complit10.C: New test.

2008-05-21  Sebastian Pop  <sebastian.pop@amd.com>
	    Jan Sjodin  <jan.sjodin@amd.com>

	PR tree-optimization/36181
	Backport from mainline:
	* gcc.dg/tree-ssa/pr36181.c: New.

2008-05-20  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2008-05-15  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36244
	* gcc.dg/torture/pr36244.c: New testcase.

	PR tree-optimization/34330
	* gcc.dg/torture/pr34330.c: New testcase.

2008-05-19  Adam Nemet  <anemet@caviumnetworks.com>

	PR middle-end/36194
	* gcc.dg/pr36194.c: New test.

2008-05-14  Michael Meissner  <michael.meissner@amd.com>

	Backport from mainline:
	PR target/36224
	* gcc.dg/pr36224.c: New file.

2008-05-18  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/36176
	* gfortran.dg/transfer_simplify_9.f90: New test.

2008-05-18  Jakub Jelinek  <jakub@redhat.com>

	PR target/36090
	* gcc.c-torture/execute/20080502-1.c: New test.

2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>
