@@ -1,6 +1,6 @@
 /* Test generation of DFP instructions for POWER6.  */
 /* Origin: Janis Johnson <janis187@us.ibm.com> */
-/* { dg-do compile { target powerpc*-*-linux* } } */
+/* { dg-do compile { target { powerpc*-*-linux* && powerpc_fprs } } } */
 /* { dg-options "-std=gnu99 -mcpu=power6" } */
 
 /* { dg-final { scan-assembler "dadd" } } */
