@@ -1257,7 +1257,11 @@ proc check_effective_target_powerpc_altivec_ok { } {
 # Return 1 if this is a PowerPC target that supports SPU.
 
 proc check_effective_target_powerpc_spu { } {
-    return [istarget powerpc*-*-linux*]
+    if [istarget powerpc*-*-linux*] {
+	return [check_effective_target_powerpc_altivec_ok]
+    } else {
+	return 0
+    }
 }
 
 # Return 1 if this is a PowerPC target with SPE enabled.
